--- a/exercises/01.classes/01.problem.class-basics/README.mdx
+++ b/exercises/01.classes/01.problem.class-basics/README.mdx
@@ -1,5 +1,7 @@
 # Class Basics
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/1-classes/class-basics" />
+
 👨‍💼 Let's create our first classes. We'll build a simple product management
 system.
 
