--- a/exercises/01.classes/01.solution.class-basics/README.mdx
+++ b/exercises/01.classes/01.solution.class-basics/README.mdx
@@ -1,5 +1,7 @@
 # Class Basics
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/1-classes/class-basics" />
+
 👨‍💼 Excellent! You've created classes that encapsulate data and behavior.
 
 🦉 Notice how `ShoppingCart` manages its own `items` array and provides methods
