--- a/exercises/01.classes/02.problem.private-fields-and-defaults/README.mdx
+++ b/exercises/01.classes/02.problem.private-fields-and-defaults/README.mdx
@@ -1,5 +1,7 @@
 # Private Fields and Defaults
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/1-classes/private-fields-and-defaults" />
+
 👨‍💼 Classes can hide implementation details using private fields and provide
 flexibility with default parameter values.
 
