--- a/exercises/01.classes/FINISHED.mdx
+++ b/exercises/01.classes/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Classes
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/1-classes/break-classes" />
+
 👨‍💼 Great work creating classes!
 
 You learned:
