--- a/exercises/01.classes/README.mdx
+++ b/exercises/01.classes/README.mdx
@@ -1,5 +1,7 @@
 # Classes
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/1-classes/intro-to-classes" />
+
 Classes combine data (fields) and behavior (methods) into a single unit. They're
 templates for creating objects.
 
