--- a/exercises/02.interfaces-and-classes/01.problem.implementing-interfaces/README.mdx
+++ b/exercises/02.interfaces-and-classes/01.problem.implementing-interfaces/README.mdx
@@ -1,5 +1,7 @@
 # Implementing Interfaces
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/implementing-interfaces" />
+
 👨‍💼 Let's build a payment system with different payment methods. We'll use
 interfaces to ensure all payment methods follow the same contract.
 
