--- a/exercises/02.interfaces-and-classes/01.solution.implementing-interfaces/README.mdx
+++ b/exercises/02.interfaces-and-classes/01.solution.implementing-interfaces/README.mdx
@@ -1,5 +1,7 @@
 # Implementing Interfaces
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/implementing-interfaces" />
+
 👨‍💼 Perfect! Both `CreditCard` and `PayPal` implement the same interface, ensuring
 they can be used interchangeably.
 
