--- a/exercises/02.interfaces-and-classes/02.problem.programming-to-abstractions/README.mdx
+++ b/exercises/02.interfaces-and-classes/02.problem.programming-to-abstractions/README.mdx
@@ -1,5 +1,7 @@
 # Programming to Abstractions
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/programming-to-abstractions" />
+
 👨‍💼 Now let's write code that works with any class implementing an interface.
 This is called "programming to abstractions"—using interfaces instead of
 concrete classes.
