--- a/exercises/02.interfaces-and-classes/02.solution.programming-to-abstractions/README.mdx
+++ b/exercises/02.interfaces-and-classes/02.solution.programming-to-abstractions/README.mdx
@@ -1,5 +1,7 @@
 # Programming to Abstractions
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/programming-to-abstractions" />
+
 👨‍💼 Excellent! You're now programming to abstractions.
 
 🦉 By using `PaymentMethod` as the parameter type, `processPayment()` works with
