--- a/exercises/02.interfaces-and-classes/FINISHED.mdx
+++ b/exercises/02.interfaces-and-classes/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Interfaces and Classes
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/break-interfaces-and-classes" />
+
 👨‍💼 Excellent work implementing interfaces!
 
 You learned:
