--- a/exercises/02.interfaces-and-classes/README.mdx
+++ b/exercises/02.interfaces-and-classes/README.mdx
@@ -1,5 +1,7 @@
 # Interfaces and Classes
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/2-interfaces-and-classes/intro-to-interfaces-and-classes" />
+
 Interfaces define contracts that classes can implement. They specify what methods
 and properties a class must have, without providing the implementation.
 
