--- a/exercises/03.inheritance-and-polymorphism/01.problem.extends/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/01.problem.extends/README.mdx
@@ -1,5 +1,7 @@
 # Extends
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/extends" />
+
 👨‍💼 Let's build a shape hierarchy. We'll create a base `Shape` class and extend
 it with specific shapes like `Circle` and `Rectangle`.
 
