--- a/exercises/03.inheritance-and-polymorphism/01.solution.extends/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/01.solution.extends/README.mdx
@@ -1,5 +1,7 @@
 # Extends
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/extends" />
+
 👨‍💼 Perfect! Both `Circle` and `Rectangle` inherit the `color` field from `Shape`.
 
 🦉 Notice how `Circle` and `Rectangle` automatically have access to `color` without
