--- a/exercises/03.inheritance-and-polymorphism/02.problem.method-overriding/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/02.problem.method-overriding/README.mdx
@@ -1,5 +1,7 @@
 # Method Overriding
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/method-overriding" />
+
 👨‍💼 Now let's add methods to our shape hierarchy. Each shape will override a
 method to provide its own implementation.
 
