--- a/exercises/03.inheritance-and-polymorphism/03.problem.substitutability/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/03.problem.substitutability/README.mdx
@@ -1,5 +1,7 @@
 # Substitutability
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/substitutability" />
+
 👨‍💼 Let's build a media player that can play different types of media files.
 We'll use polymorphism to handle all media types uniformly.
 
