--- a/exercises/03.inheritance-and-polymorphism/03.solution.substitutability/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/03.solution.substitutability/README.mdx
@@ -1,5 +1,7 @@
 # Substitutability
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/substitutability" />
+
 👨‍💼 Perfect! You've demonstrated polymorphism in action.
 
 🦉 Notice how `MediaPlayer.playFile()` accepts `MediaFile` as the parameter
