--- a/exercises/03.inheritance-and-polymorphism/FINISHED.mdx
+++ b/exercises/03.inheritance-and-polymorphism/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Inheritance and Polymorphism
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/break-inheritance-and-polymorphism" />
+
 👨‍💼 Excellent work building class hierarchies and demonstrating polymorphism!
 
 You learned:
