--- a/exercises/03.inheritance-and-polymorphism/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/README.mdx
@@ -1,5 +1,7 @@
 # Inheritance and Polymorphism
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/intro-to-inheritance-and-polymorphism" />
+
 Inheritance allows classes to extend other classes, inheriting their fields and
 methods. This enables code reuse and hierarchical relationships. Polymorphism
 builds on inheritance, allowing you to treat objects of different types uniformly
