--- a/exercises/04.composition-vs-inheritance/01.problem.when-to-use/README.mdx
+++ b/exercises/04.composition-vs-inheritance/01.problem.when-to-use/README.mdx
@@ -1,5 +1,7 @@
 # When to Use Composition vs Inheritance
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/when-to-use" />
+
 👨‍💼 Let's build a notification system. We need to decide whether to use
 inheritance or composition for different scenarios.
 
