--- a/exercises/04.composition-vs-inheritance/02.problem.dependency-injection/README.mdx
+++ b/exercises/04.composition-vs-inheritance/02.problem.dependency-injection/README.mdx
@@ -1,5 +1,7 @@
 # Dependency Injection
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/dependency-injection" />
+
 👨‍💼 Now let's see the power of composition! We can swap different logger
 implementations without changing `EmailService`. This is dependency injection—a
 key benefit of composition.
