--- a/exercises/04.composition-vs-inheritance/02.solution.dependency-injection/README.mdx
+++ b/exercises/04.composition-vs-inheritance/02.solution.dependency-injection/README.mdx
@@ -1,5 +1,7 @@
 # Dependency Injection
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/dependency-injection" />
+
 👨‍💼 Perfect! You've demonstrated dependency injection in action.
 
 🦉 Notice how `EmailService` doesn't need to know about `MockLogger` or
