--- a/exercises/04.composition-vs-inheritance/FINISHED.mdx
+++ b/exercises/04.composition-vs-inheritance/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Composition vs Inheritance
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/break-composition-vs-inheritance" />
+
 👨‍💼 Excellent work choosing the right approach!
 
 You learned:
