--- a/exercises/04.composition-vs-inheritance/README.mdx
+++ b/exercises/04.composition-vs-inheritance/README.mdx
@@ -1,5 +1,7 @@
 # Composition vs Inheritance
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/intro-to-composition-vs-inheritance" />
+
 Both composition and inheritance are ways to reuse code, but they solve different
 problems. Knowing when to use each is crucial for good design.
 
