--- a/exercises/FINISHED.mdx
+++ b/exercises/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Object-Oriented TypeScript
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/outro-to-object-oriented-typescript/outro-to-object-oriented-typescript" />
+
 👨‍💼 Congratulations! You've completed the Object-Oriented TypeScript workshop!
 🎉
 
