--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -1,5 +1,7 @@
 # Object-Oriented TypeScript 🏛️
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/introduction-to-object-oriented-typescript/intro-to-object-oriented-typescript" />
+
 👨‍💼 Welcome to the Object-Oriented Programming workshop! This workshop focuses
 on **encapsulation and polymorphism**, not just syntax.
 
