--- a/exercises/03.inheritance-and-polymorphism/02.solution.method-overriding/README.mdx
+++ b/exercises/03.inheritance-and-polymorphism/02.solution.method-overriding/README.mdx
@@ -1,5 +1,7 @@
 # Method Overriding
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/3-inheritance-and-polymorphism/method-overriding" />
+
 👨‍💼 Excellent! Each shape now provides its own `getArea()` implementation.
 
 🦉 Method overriding allows subclasses to provide specialized behavior while
