--- a/exercises/04.composition-vs-inheritance/01.solution.when-to-use/README.mdx
+++ b/exercises/04.composition-vs-inheritance/01.solution.when-to-use/README.mdx
@@ -1,5 +1,7 @@
 # When to Use Composition vs Inheritance
 
+<EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/4-composition-vs-inheritance/when-to-use" />
+
 👨‍💼 Perfect! You've demonstrated both patterns correctly.
 
 🦉 Notice the difference:
