add theme song video embed to exercises intro
Made-with: Cursor

--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -2,6 +2,11 @@
 
 <EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/introduction-to-object-oriented-typescript/intro-to-object-oriented-typescript" />
 
+<VideoEmbed
+	title="Object Oriented TypeScript Theme Song"
+	url="https://www.youtube.com/embed/Y56vgvDBzy4?rel=0"
+/>
+
 👨‍💼 Welcome to the Object-Oriented Programming workshop! This workshop focuses
 on **encapsulation and polymorphism**, not just syntax.
 
