move theme song embed to README footer
Made-with: Cursor

--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -2,11 +2,6 @@
 
 <EpicVideo url="https://www.epicweb.dev/workshops/object-oriented-typescript/introduction-to-object-oriented-typescript/intro-to-object-oriented-typescript" />
 
-<VideoEmbed
-	title="Object Oriented TypeScript Theme Song"
-	url="https://www.youtube.com/embed/Y56vgvDBzy4?rel=0"
-/>
-
 👨‍💼 Welcome to the Object-Oriented Programming workshop! This workshop focuses
 on **encapsulation and polymorphism**, not just syntax.
 
@@ -69,3 +64,10 @@ By the end of this workshop, you'll be able to:
 - **Make informed decisions** about when OOP or FP is the better fit
 
 Let's build some objects! 🧱
+
+🎵 Check out the workshop theme song! 🎶
+
+<VideoEmbed
+	title="Object Oriented TypeScript Theme Song"
+	url="https://www.youtube.com/embed/Y56vgvDBzy4?rel=0"
+/>
